--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "minstack-echoipserver"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "echoipserver"
+path = "src/main.rs"
+
 [dependencies]
 axum = "0.7"
 clap-serde-derive = "0.2.1"
