--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ axum = "0.7"
 clap-serde-derive = "0.2.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-serde_yml = "0.0.5"
+serde_yml = "~0.0.5"
 tokio = { version = "1.0", features = ["rt-multi-thread"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
